# oscilador_harmonico

./: pyproject.toml  pyrightconfig.json
src/: __main__.py  menu.py  ml.py  sand_box.py  utils.py
